Alterações AlbumDAL e importação jfoenix

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,10 +5,10 @@ do.jar=true
 do.jlink=false
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
-file.reference.jfoenix-8.0.8.jar=C:\\Users\\gabri\\Documents\\GitHub\\ferro2_luanaporto_barbaraalexandre\\pacotes\\jfoenix-8.0.10.jar
+file.reference.jfoenix-8.0.8.jar=E:\\f2\\ferro2_luanaporto_barbaraalexandre
 javac.debug=true
 javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\iexplore.exe
 jlink.strip=false
-user.properties.file=C:\\Users\\gabri\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\ROGERIO\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
