--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,9 @@ dist.jar=${dist.dir}/AlbunsFX.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jfoenix-8.0.10.jar=pacotes\\jfoenix-8.0.10.jar
 file.reference.jfoenix-8.0.8.jar=pacotes\\jfoenix-8.0.8.jar
+file.reference.jfoenix-8.0.8.jar-1=pacotes\\jfoenix-8.0.8.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -41,7 +43,9 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.PostgreSQLDriver.classpath}:\
-    ${file.reference.jfoenix-8.0.8.jar}
+    ${file.reference.jfoenix-8.0.8.jar}:\
+    ${file.reference.jfoenix-8.0.10.jar}:\
+    ${file.reference.jfoenix-8.0.8.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
