--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,7 +5,7 @@ do.jar=true
 do.jlink=false
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
-file.reference.jfoenix-8.0.8.jar=C:\\Users\\gabri\\Documents\\GitHub\\ferro2_luanaporto_barbaraalexandre\\pacotes\\jfoenix-8.0.10.jar
+file.reference.jfoenix-8.0.8.jar=E:\\f2\\ferro2_luanaporto_barbaraalexandre\\pacotes\\jfoenix-8.0.8.jar
 javac.debug=true
 javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
