--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,7 +35,6 @@ endorsed.classpath=
 excludes=
 file.reference.jfoenix-8.0.10.jar=pacotes\\jfoenix-8.0.10.jar
 file.reference.jfoenix-8.0.8.jar=pacotes\\jfoenix-8.0.8.jar
-file.reference.jfoenix-8.0.8.jar-1=pacotes\\jfoenix-8.0.8.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -44,8 +43,7 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.PostgreSQLDriver.classpath}:\
     ${file.reference.jfoenix-8.0.8.jar}:\
-    ${file.reference.jfoenix-8.0.10.jar}:\
-    ${file.reference.jfoenix-8.0.8.jar-1}
+    ${file.reference.jfoenix-8.0.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
