--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -11,4 +11,4 @@ javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\iexplore.exe
 jlink.strip=false
-user.properties.file=C:\\Users\\gabri\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\ROGERIO\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
